--- a/hello_world.html
+++ b/hello_world.html
@@ -3,8 +3,7 @@
   <head>
    <title>My First Website!</title>
   </head>
-  <body> 
-   <h1>WELCOME</h1>
-   <p>Hello World</p>
+  <body>  
+    <p>""Life is not about waiting for the storm to pass but learning to dance in the rain"</p>
   </body>
 </html>
