--- a/Sports_related news.html
+++ b/Sports_related news.html
@@ -1,25 +1,20 @@
-<--!Tiffany Nguyen-->
+<!--Tiffany Nguyen-->
 <!DOCTYPE html>
 <html>
 <head>
  <title>Sports news</title>
   <style>
 body {
-    background-color:grey;
+    background-color:rgb(0, 153, 255);
 }
 h1 {
-    color: white;
+    color:rgb(0, 51, 102);
     text-align: center;
 }
 h2{
-   color: white;
+   color:white;
 }
-h3{
-   color: white;
-}
-h4{
-   color: white;
-}
+
 p {
     font-family: verdana;
     font-size: 15px;
@@ -51,7 +46,7 @@ West Ham also had a scary injury to Winston Reid, in which the New Zealand defen
 
 Moyes admitted the knee is a bigger concern than the head, which is good considering the player was knocked unconscious.</p>
    <p><em><strong>“Winston Reid is conscious, he was knocked out, we are more worried about the injury to his knee than the knock to his head. He’s an important player for us so we hope it’s not too bad.”</em></strong></p>
-   <h3>MAAME BINEY TAKES GOLD AT WORLD JUNIOR SHORT TRACK CHAMPIONSHIPS</H3>
+   <h2>MAAME BINEY TAKES GOLD AT WORLD JUNIOR SHORT TRACK CHAMPIONSHIPS</H2>
    <P>Maame Biney, the bubbly 17-year-old on the U.S. Olympic short track team, won the world junior title in the 500m, her best event, in Poland on Saturday.</P>
 
    <P>Biney crossed in 44.305 seconds, edging a Hungarian by .054.
@@ -62,7 +57,7 @@ She became <em><strong>the first American</strong></em> to win a world junior ti
 
    <P>Born in Ghana, Biney moved to the U.S. at age 5 and was raised in Reston, Va., by a single father, Kweku, who previously immigrated to the U.S.</P>
    <img src="https://www.teamusa.org/-/media/TeamUSA/Speedskating/Biney_Maame/MaameBiney_qualified_800x500.jpg"/>
-   <h4> WINTER OLYMPICS 2018: UNITED STATES ENDS CANADA'S ICE HOCKEY DOMINANCE AS WOMEN WIN GOLD IN THRILLING SHOOTOUT</H4>
+   <h2> WINTER OLYMPICS 2018: UNITED STATES ENDS CANADA'S ICE HOCKEY DOMINANCE AS WOMEN WIN GOLD IN THRILLING SHOOTOUT</H2>
    <img src="https://static.independent.co.uk/s3fs-public/styles/story_large/public/thumbnails/image/2018/02/22/08/ice-hockey1.jpg"/>
    <P>The United States won a dramatic sudden death penalty shoot-out in the women's final to strike gold and end Canada's Winter Olympics ice hockey reign in Pyeongchang.</P>
 
