--- a/electronic_portfolio/about_me.html
+++ b/electronic_portfolio/about_me.html
@@ -27,3 +27,14 @@ h1 {
 
 <!--Tiffany Nguyen-->
 <h1>About me</h1>
+<ul>
+    <li>Tiffany nguyen</li>
+    <li>16 years old, grade 11</li>
+    <li>Enver Creek Secondary School 14505 84 Ave, Surrey, BC V3S 8X2</li>
+    <li>Can speak bilingual: Vietnamese and English</li>
+    <li>Favour: painting</li>
+    <li>Email address: Khanhitran2909@gmail.com</li>
+</ul>
+</body>
+</html>
+    
