--- a/electronic_portfolio/main.html
+++ b/electronic_portfolio/main.html
@@ -17,11 +17,11 @@ h1 {
 <h1>My Portfolio</h1>
 <table id="menu">
 <tr>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
+<th><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></th>
+<th><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></th>
+<th><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></th>
+<th><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></th>
+<th><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></th>
 </tr>
 </table>
 </body>
