--- a/electronic_portfolio/academic_history.html
+++ b/electronic_portfolio/academic_history.html
@@ -24,3 +24,41 @@ h1 {
 <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
 </tr>
 </table>
+
+<!--Tiffany Nguyen-->
+    <h1>Academic history</h1>
+   <table style="width:100%">
+  <tr>
+    <th>Subject</th>
+    <th>L.G</th>
+    <th>%</th> 
+    <th>W.H</th>
+  </tr>
+  <tr>
+    <td>Math</td>
+    <td>A</td> 
+    <td>87%</td>
+    <td>Good</td>
+  </tr>
+  <tr>
+    <td>Science</td>
+    <td>B</td> 
+    <td>75%</td>
+    <td>Good</td>
+  </tr>
+  <tr>
+    <td>Planning</td>
+    <td>A</td>
+    <td>90%</td>
+    <td>Good</td>
+  </tr>
+  <tr>
+    <td>ELL</td>
+    <td>B</td>
+    <td>75%</td>
+    <td>Good</td>
+  </tr>  
+    </table>
+    <p>Absent:0</p>
+    </body>
+</html>
