--- a/electronic_portfolio/accomplishments.html
+++ b/electronic_portfolio/accomplishments.html
@@ -15,7 +15,7 @@ h1 {
 <body>
 
 <h1>My Portfolio</h1>
-<table id="menu">
+<table style="width:100%">
 <tr>
 <td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
 <td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
