--- a/electronic_portfolio/about_me.html
+++ b/electronic_portfolio/about_me.html
@@ -1,4 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Page Title</title>
+   <style> 
+body {
+    background-color: rgb(102, 204, 255);
+}
+h1 {
+    color: rgb(102, 0, 204);
+    text-align: center;
+}
+   </style>
+ </head>
+ <body>
+  <h1>My Portfolio</h1>
+   <table style="width:100%">
+    <tr>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
+    </tr>
+   </table>
 
 <!--Tiffany Nguyen-->
 <h1>About me</h1>
