--- a/electronic_portfolio/main.html
+++ b/electronic_portfolio/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<style>
+  <title>Page Title</title>
+   <style> 
 body {
     background-color: rgb(102, 204, 255);
 }
@@ -10,19 +10,16 @@ h1 {
     color: rgb(102, 0, 204);
     text-align: center;
 }
-</style>
-</head>
-<body>
-
-<h1>My Portfolio</h1>
-<table style="width:100%">
-<tr>
-<th><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></th>
-<th><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></th>
-<th><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></th>
-<th><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></th>
-<th><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></th>
-</tr>
-</table>
-</body>
-  </html>
+   </style>
+ </head>
+ <body>
+  <h1>My Portfolio</h1>
+   <table style="width:100%">
+    <tr>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
+    </tr>
+   </table>
