--- a/electronic_portfolio/accomplishments.html
+++ b/electronic_portfolio/accomplishments.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<style>
+  <title>Page Title</title>
+   <style> 
 body {
     background-color: rgb(102, 204, 255);
 }
@@ -10,17 +10,21 @@ h1 {
     color: rgb(102, 0, 204);
     text-align: center;
 }
-</style>
-</head>
-<body>
-
-<h1>My Portfolio</h1>
-<table style="width:100%">
-<tr>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></td>
-<td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
-</tr>
-</table>
+   </style>
+ </head>
+ <body>
+  <h1>My Portfolio</h1>
+   <table style="width:100%">
+    <tr>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/main.html">Main</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/about_me.html">About Me</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/academic_history.html">Academic History</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/volunteer_experience.html">Volunteer Experience</a></td>
+     <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
+    </tr>
+   </table>
+   
+<!--Tiffany Nguyen-->
+  <p> After more than 1 year in studying new language and different culture,also education, I have studied very much things and can improve my English, got the good academic in Enver Creek. I also have the preparation for my career and the university I will go after graduation High school.</p>
+ </body>
+</html>
