--- a/electronic_portfolio/volunteer_experience.html
+++ b/electronic_portfolio/volunteer_experience.html
@@ -24,6 +24,7 @@ h1 {
     </tr>
    </table>
 <!--Tiffany Nguyen-->
+   <h1>Work and Volunteer experience</h1>
     <p>Work: helped selling food in Vietnamese Community's place.</p>
     <p>Volunteer experience: I have already applied for Volunteer job.</p>
  </body>
