--- a/electronic_portfolio/about_me.html
+++ b/electronic_portfolio/about_me.html
@@ -2,17 +2,22 @@
 <html>
 <head>
   <title>Page Title</title>
-   <style> 
-body {
-    background-color: rgb(102, 204, 255);
+   <style>
+table{
+      font-color: white;
 }
-h1 {
-    color: rgb(102, 0, 204);
+.background {
+	height: 1050px;
+    width: 960px;
+     background: linear-gradient(#33CCFF,#9900CC);
+ h1 {
+    color:rgb(0, 0, 102) ;
     text-align: center;
 }
    </style>
  </head>
  <body>
+ <div class="background">
   <h1>My Portfolio</h1>
    <table style="width:100%">
     <tr>
@@ -23,7 +28,6 @@ h1 {
      <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
     </tr>
    </table>
-
 <!--Tiffany Nguyen-->
 <h1>About me</h1>
 <ul>
@@ -34,6 +38,7 @@ h1 {
     <li>Favour: painting</li>
     <li>Email address: Khanhitran2909@gmail.com</li>
 </ul>
+</div>
 </body>
 </html>
     
