--- a/electronic_portfolio/academic_history.html
+++ b/electronic_portfolio/academic_history.html
@@ -2,17 +2,22 @@
 <html>
 <head>
   <title>Page Title</title>
-   <style> 
-body {
-    background-color: rgb(102, 204, 255);
+   <style>
+table{
+      font-color: white;
 }
-h1 {
-    color: rgb(102, 0, 204);
+.background {
+	height: 1050px;
+    width: 960px;
+     background: linear-gradient(#33CCFF,#9900CC);
+ h1 {
+    color:rgb(0, 0, 102) ;
     text-align: center;
 }
    </style>
  </head>
  <body>
+ <div class="background">
   <h1>My Portfolio</h1>
    <table style="width:100%">
     <tr>
@@ -23,7 +28,6 @@ h1 {
      <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
     </tr>
    </table>
-     
 <!--Tiffany Nguyen-->
     <h1>Academic history</h1>
    <table style="width:100%">
@@ -58,6 +62,7 @@ h1 {
     <td>Good</td>
   </tr>  
     </table>
-    <p>Absent:0</p>
+   <p>Absent:0</p>
+   </div>
     </body>
 </html>
