--- a/electronic_portfolio/accomplishments.html
+++ b/electronic_portfolio/accomplishments.html
@@ -2,17 +2,22 @@
 <html>
 <head>
   <title>Page Title</title>
-   <style> 
-body {
-    background-color: rgb(102, 204, 255);
+   <style>
+table{
+      font-color: white;
 }
-h1 {
-    color: rgb(102, 0, 204);
+.background {
+	height: 1050px;
+    width: 960px;
+     background: linear-gradient(#33CCFF,#9900CC);
+ h1 {
+    color:rgb(0, 0, 102) ;
     text-align: center;
 }
    </style>
  </head>
  <body>
+ <div class="background">
   <h1>My Portfolio</h1>
    <table style="width:100%">
     <tr>
@@ -23,9 +28,9 @@ h1 {
      <td><a href="https://nguyen2909.github.io/electronic_portfolio/accomplishments.html">Accomplishments</a></td>
     </tr>
    </table>
-   
 <!--Tiffany Nguyen-->
    <h1>Accomplishment</h1>
   <p> After more than 1 year in studying new language and different culture,also education, I have studied very much things and can improve my English, got the good academic in Enver Creek. I also have the preparation for my career and the university I will go after graduation High school.</p>
+   </div>
  </body>
 </html>
