--- a/electronic_portfolio/volunteer_experience.html
+++ b/electronic_portfolio/volunteer_experience.html
@@ -2,17 +2,19 @@
 <html>
 <head>
   <title>Page Title</title>
-   <style> 
-body {
-    background-color: rgb(102, 204, 255);
-}
-h1 {
-    color: rgb(102, 0, 204);
+   <style>
+.background {
+	height: 1050px;
+    width: 960px;
+     background: linear-gradient(#33CCFF,#9900CC);
+ h1 {
+    color:rgb(0, 0, 102) ;
     text-align: center;
 }
    </style>
  </head>
  <body>
+ <div class="background">
   <h1>My Portfolio</h1>
    <table style="width:100%">
     <tr>
@@ -27,5 +29,6 @@ h1 {
    <h1>Work and Volunteer experience</h1>
     <p>Work: helped selling food in Vietnamese Community's place.</p>
     <p>Volunteer experience: I have already applied for Volunteer job.</p>
+   </div>
  </body>
 </html>
