--- a/computer-history/1970.html
+++ b/computer-history/1970.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+h1{
+   color: rgb(0, 51, 0);
+   text-align: center;
+}
+.vertical-menu {
+    width: 200px;
+}
+.vertical-menu a {
+    background-color:rgb(153, 255, 204) ;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+.vertical-menu a.active {
+    background-color:rgb(0, 102, 102) ;
+    color: white;
+}
+</style>
+</head>
+<body>
+
+<h1>COMPUTER HISTORY</h1>
+
+<div class="vertical-menu">
+  <a href="https://nguyen2909.github.io/computer-history/home.html" class="active">Home</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970</a>
+  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980</a>
+  <a href="nguyen2909.github.io/computer-history/1990.html">1990</a>
+  <a href="https://nguyen2909.github.io/computer-history/2000.html">2000</a>
+  <a href="https://nguyen2909.github.io/computer-history/2010.html">2010</a>
+</div>
+
+</body>
+</html>
 
