--- a/computer-history/1970.html
+++ b/computer-history/1970.html
@@ -10,6 +10,7 @@ h1{
 .vertical-menu {
     width: 200px;
 }
+
 .vertical-menu a {
     background-color:rgb(153, 255, 204) ;
     color: black;
@@ -17,9 +18,11 @@ h1{
     padding: 12px;
     text-decoration: none;
 }
+
 .vertical-menu a:hover {
     background-color: #ccc;
 }
+
 .vertical-menu a.active {
     background-color:rgb(0, 102, 102) ;
     color: white;
@@ -31,14 +34,17 @@ h1{
 <h1>COMPUTER HISTORY</h1>
 
 <div class="vertical-menu">
-  <a href="https://nguyen2909.github.io/computer-history/home.html" class="active">Home</a>
-  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970</a>
+  <a href="https://nguyen2909.github.io/computer-history/home.html">Home</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html" class="active">1970</a>
   <a href="https://nguyen2909.github.io/computer-history/1980.html">1980</a>
   <a href="nguyen2909.github.io/computer-history/1990.html">1990</a>
   <a href="https://nguyen2909.github.io/computer-history/2000.html">2000</a>
   <a href="https://nguyen2909.github.io/computer-history/2010.html">2010</a>
+
 </div>
+<p>bsxhbuhsjxc</p>
 
 </body>
 </html>
+
 
