--- a/computer-history/1970.html
+++ b/computer-history/1970.html
@@ -3,6 +3,15 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+img{
+   }
+h2{
+   color:rgb(0, 0, 153);
+   text-align: center;
+}
+body {
+    background-color:rgb(51, 204, 255);
+}
 h1{
    color: rgb(0, 51, 0);
    text-align: center;
@@ -38,6 +47,11 @@ h1{
   <a href="https://nguyen2909.github.io/computer-history/2000.html">2000</a>
   <a href="https://nguyen2909.github.io/computer-history/2010.html">2010</a>
 </div>
+<h2>Amdahl Corporation introduces the Amdahl 470</h2>
+<p>
+<img src="http://images.computerhistory.org/timeline/timeline_computers_1970.amdahl470.jpg" style="float:left;width:400px;height:500px;"><strong>Gene Amdahl, father of the IBM System/360, starts his own company, Amdahl Corporation, to compete with IBM in mainframe computer systems. The 470V/6 was the company’s first product and ran the same software as IBM System/370 computers but cost less and was smaller and faster.</strong></p>
+
+<img src="http://cf.ydcdn.net/latest/images/computer/_AMDAHLG.GIF" style="float:left;width:300px;height:400px;">
 
 </body>
 </html>
