--- a/computer-history/home.html
+++ b/computer-history/home.html
@@ -3,14 +3,16 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+body{
+     background-color:rgb(204, 204, 255);
+}
 h1{
-   color: rgb(0, 51, 0);
+   color:rgb(153, 0, 204) ;
    text-align: center;
 }
 .vertical-menu {
     width: 200px;
 }
-
 .vertical-menu a {
     background-color:rgb(153, 255, 204) ;
     color: black;
@@ -18,11 +20,9 @@ h1{
     padding: 12px;
     text-decoration: none;
 }
-
 .vertical-menu a:hover {
     background-color: #ccc;
 }
-
 .vertical-menu a.active {
     background-color:rgb(0, 102, 102) ;
     color: white;
@@ -32,6 +32,7 @@ h1{
 <body>
 
 <h1>COMPUTER HISTORY</h1>
+<img src="https://unnecessarynewsfromearth.files.wordpress.com/2017/04/c8a.gif?w=700" alt="Computer man" style="width:500px;height:400px;">
 
 <div class="vertical-menu">
   <a href="https://nguyen2909.github.io/computer-history/home.html" class="active">Home</a>
