--- a/computer-history/home.html
+++ b/computer-history/home.html
@@ -36,11 +36,11 @@ h1{
 
 <div class="vertical-menu">
   <a href="https://nguyen2909.github.io/computer-history/home.html" class="active">Home</a>
-  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970</a>
-  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980</a>
-  <a href="nguyen2909.github.io/computer-history/1990.html">1990</a>
-  <a href="https://nguyen2909.github.io/computer-history/2000.html">2000</a>
-  <a href="https://nguyen2909.github.io/computer-history/2010.html">2010</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1990.html">1990s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2000.html">2000s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2010.html">2010s</a>
 </div>
 
 </body>
