--- a/computer-history/1990.html
+++ b/computer-history/1990.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+p{ 
+  color: white;
+  font-size:15px;
+}
+body{
+     background-color:rgb(102, 153, 255);
+}
+h1{
+   color:rgb(0, 0, 102) ;
+   text-align: center;
+}
+.vertical-menu {
+    width: 200px;
+}
+.vertical-menu a {
+    background-color:rgb(153, 255, 204) ;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+.vertical-menu a.active {
+    background-color:rgb(0, 102, 102) ;
+    color: white;
+}
+</style>
+</head>
+<body>
 
+<h1>COMPUTER HISTORY</h1>
+
+<div class="vertical-menu">
+  <a href="https://nguyen2909.github.io/computer-history/home.html" >Home</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1990.html"class="active">1990s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2000.html">2000s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2010.html">2010s</a>
+</div>
+<h2>CompactFlash</h2>
+<p style="background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg')">
+<img style="background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg')" src="http://images.computerhistory.org/timeline/timeline_memorystorage_1994.compactflash.jpg" style="float:left;width:200px;height:200px;"><strong>When CompactFlash is introduced by SanDisk, it is quickly adopted and becomes the preferred memory storage option in many consumer as well as professional electronic devices. It was highly popular in digital still and video cameras, and although its dimensions were slightly larger than some other memory card formats, its ruggedness and high capacity made it a preferred choice. Although most CompactFlash units used flash memory, some actually relied on a hard disk.</strong>
+</body>
+</html>
