--- a/computer-history/2000.html
+++ b/computer-history/2000.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+h2{
+   color:rgb(0, 0, 102);
+   text-align: center;
+}
+p{
+  color:black;
+  font-size:15px;
+}
+body{
+     background-color:rgb(0, 255, 255);
+}
+h1{
+   color:rgb(0, 0, 102) ;
+   text-align: center;
+}
+.vertical-menu {
+    width: 200px;
+}
+.vertical-menu a {
+    background-color:rgb(153, 255, 204) ;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+.vertical-menu a.active {
+    background-color:rgb(0, 102, 102) ;
+    color: white;
+}
+</style>
+</head>
+<body>
+
+<h1>COMPUTER HISTORY</h1>
+<div class="vertical-menu">
+  <a href="https://nguyen2909.github.io/computer-history/home.html" >Home</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1990.html">1990s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2000.html"class="active">2000s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2010.html">2010s</a>
+</div>
+<h2>The Sims Is Released</h2>
+<p><strong>While most games see a player working towards an end-game scenario, The Sims allows players to create a home, get a job, and form relationships in a free-form world. Designed by a team at Maxis led by Wil Wright, The Sims took concepts from Wright's previous game Sim City. Characters controlled by the player were customizable, and spoke an artificial language called Simlish. The Sims became exceptionally popular with women, who accounted for more than sixty percent of players.</strong></p>
+<img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-520-h-520-scale/public/cc_uk/galleries/large/2017/01/06/9.gif?itok=TyF7vFBp" alt="Computer man" style="width:500px;height:400px;">
+
+
+</body>
+</html>
 
