--- a/computer-history/2010.html
+++ b/computer-history/2010.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+h2{
+   color:rgb(0, 0, 102);
+   text-align: center;
+}
+   
+p{
+  color: white;
+  font-size: 15px;
+}
+body{
+     background-color:rgb(0, 153, 204);
+}
+h1{
+   color:rgb(0, 0, 102) ;
+   text-align: center;
+}
+.vertical-menu {
+    width: 200px;
+}
+.vertical-menu a {
+    background-color:rgb(153, 255, 204) ;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+.vertical-menu a.active {
+    background-color:rgb(0, 102, 102) ;
+    color: white;
+}
+</style>
+</head>
+<body>
+
+<h1>COMPUTER HISTORY</h1>
+
+<div class="vertical-menu">
+  <a href="https://nguyen2909.github.io/computer-history/home.html" >Home</a>
+  <a href="https://nguyen2909.github.io/computer-history/1970.html">1970s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1980.html">1980s</a>
+  <a href="https://nguyen2909.github.io/computer-history/1990.html">1990s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2000.html">2000s</a>
+  <a href="https://nguyen2909.github.io/computer-history/2010.html"class="active">2010s</a>
+</div>
+<h2>HTML 5 Is Announced</h2>
+<p style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg')">
+<img style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg')" src="http://images.computerhistory.org/timeline/timeline_sw.languages_2014_html5.jpg" style="float:left;width:100px;height:200px;"><strong>HTML 5 is announced as the successor to HTML 4, which had become the standard for web markup languages in 1997. Markup languages describe how web pages will look and function. Work on HTML 5 had begun in 2004 under the auspices of the Web Hypertext Application Technology Working Group. It was simplified compared to its predecessors and was intended to be human-readable. HLTML 5 also offered a number of improvements for multimedia, such as simplifying the embedding of content such as streaming video and games into web pages.</strong></p>
+
+</body>
+</html>
 
