--- a/computer-history/1990.html
+++ b/computer-history/1990.html
@@ -3,6 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+h2{
+   color: rgb(0, 0, 102);
+   text-align: center;
+  }
 p{ 
   color: white;
   font-size:15px;
