--- a/computer-history/1990.html
+++ b/computer-history/1990.html
@@ -3,6 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+.background{
+            background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg');
+} 
 h2{
    color: rgb(0, 0, 102);
    text-align: center;
@@ -49,8 +52,17 @@ h1{
   <a href="https://nguyen2909.github.io/computer-history/2000.html">2000s</a>
   <a href="https://nguyen2909.github.io/computer-history/2010.html">2010s</a>
 </div>
-<h2>CompactFlash</h2>
+<div class="background">
 <p style="background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg')">
-<img style="background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg')" src="http://images.computerhistory.org/timeline/timeline_memorystorage_1994.compactflash.jpg" style="float:left;width:200px;height:200px;"><strong>When CompactFlash is introduced by SanDisk, it is quickly adopted and becomes the preferred memory storage option in many consumer as well as professional electronic devices. It was highly popular in digital still and video cameras, and although its dimensions were slightly larger than some other memory card formats, its ruggedness and high capacity made it a preferred choice. Although most CompactFlash units used flash memory, some actually relied on a hard disk.</strong>
+<img style="background-image:url('https://pbs.twimg.com/media/DNj-7lgW4AAZxOX.jpg')" src="http://images.computerhistory.org/timeline/timeline_memorystorage_1994.compactflash.jpg" style="float:left;width:200px;height:200px;"><strong>When CompactFlash is introduced by SanDisk, it is quickly adopted and becomes the preferred memory storage option in many consumer as well as professional electronic devices. It was highly popular in digital still and video cameras, and although its dimensions were slightly larger than some other memory card formats, its ruggedness and high capacity made it a preferred choice. Although most CompactFlash units used flash memory, some actually relied on a hard disk.</strong></p>
+
+<p><strong>1990: Tim Berners-Lee, a researcher at CERN, the high-energy physics laboratory in Geneva, develops HyperText Markup Language (HTML), giving rise to the World Wide Web.</strong></p>
+
+<p><strong>1993: The Pentium microprocessor advances the use of graphics and music on PCs.</strong></p>
+
+<p><strong>1994: PCs become gaming machines as "Command & Conquer," "Alone in the Dark 2," "Theme Park," "Magic Carpet," "Descent" and "Little Big Adventure" are among the games to hit the market.</strong></p>
+
+<p><strong>1996: Sergey Brin and Larry Page develop the Google search engine at Stanford University.</strong></p>
+</div>
 </body>
 </html>
