--- a/computer-history/2000.html
+++ b/computer-history/2000.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+             
 h2{
    color:rgb(0, 0, 102);
    text-align: center;
@@ -48,8 +49,16 @@ h1{
   <a href="https://nguyen2909.github.io/computer-history/2000.html"class="active">2000s</a>
   <a href="https://nguyen2909.github.io/computer-history/2010.html">2010s</a>
 </div>
-<h2>The Sims Is Released</h2>
+<h2>The Sims Is Realeased</h2>
 <p><strong>While most games see a player working towards an end-game scenario, The Sims allows players to create a home, get a job, and form relationships in a free-form world. Designed by a team at Maxis led by Wil Wright, The Sims took concepts from Wright's previous game Sim City. Characters controlled by the player were customizable, and spoke an artificial language called Simlish. The Sims became exceptionally popular with women, who accounted for more than sixty percent of players.</strong></p>
+
+<p><strong>2001: Apple unveils the Mac OS X operating system, which provides protected memory architecture and pre-emptive multi-tasking, among other benefits. Not to be outdone, Microsoft rolls out Windows XP, which has a significantly redesigned GUI.</strong></p>
+
+<p><strong>2003: The first 64-bit processor, AMD's Athlon 64, becomes available to the consumer market.</strong></p>
+
+<p><strong>2004: Mozilla's Firefox 1.0 challenges Microsoft's Internet Explorer, the dominant Web browser. Facebook, a social networking site, launches.</strong></p>
+
+<p><strong>2005: YouTube, a video sharing service, is founded. Google acquires Android, a Linux-based mobile phone operating system.</strong></p>
 <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-520-h-520-scale/public/cc_uk/galleries/large/2017/01/06/9.gif?itok=TyF7vFBp" alt="Computer man" style="width:500px;height:400px;">
 
 
