--- a/computer-history/2000.html
+++ b/computer-history/2000.html
@@ -57,11 +57,9 @@ h1{
 <p><strong>2003: The first 64-bit processor, AMD's Athlon 64, becomes available to the consumer market.</strong></p>
 
 <p><strong>2004: Mozilla's Firefox 1.0 challenges Microsoft's Internet Explorer, the dominant Web browser. Facebook, a social networking site, launches.</strong></p>
-
 <p><strong>2005: YouTube, a video sharing service, is founded. Google acquires Android, a Linux-based mobile phone operating system.</strong></p>
 <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-520-h-520-scale/public/cc_uk/galleries/large/2017/01/06/9.gif?itok=TyF7vFBp" alt="Computer man" style="width:500px;height:400px;">
-
-
+  </div>
 </body>
 </html>
 
