--- a/computer-history/2010.html
+++ b/computer-history/2010.html
@@ -3,6 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+.background {  
+              background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg');
+}
 h2{
    color:rgb(0, 0, 102);
    text-align: center;
@@ -51,9 +54,18 @@ h1{
   <a href="https://nguyen2909.github.io/computer-history/2010.html"class="active">2010s</a>
 </div>
 <h2>HTML 5 Is Announced</h2>
+<div class="background">
 <p style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg')">
 <img style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg')" src="http://images.computerhistory.org/timeline/timeline_sw.languages_2014_html5.jpg" style="float:left;width:100px;height:200px;"><strong>HTML 5 is announced as the successor to HTML 4, which had become the standard for web markup languages in 1997. Markup languages describe how web pages will look and function. Work on HTML 5 had begun in 2004 under the auspices of the Web Hypertext Application Technology Working Group. It was simplified compared to its predecessors and was intended to be human-readable. HLTML 5 also offered a number of improvements for multimedia, such as simplifying the embedding of content such as streaming video and games into web pages.</strong></p>
+
+<p><strong>2010: Apple unveils the iPad, changing the way consumers view media and jumpstarting the dormant tablet computer segment.</strong></p>
+
+<p><strong>2011: Google releases the Chromebook, a laptop that runs the Google Chrome OS.</strong></p>
+
+<p><strong>2012: Facebook gains 1 billion users on October 4.</strong></p>
+
+<p><strong>2015: Apple releases the Apple Watch. Microsoft releases Windows 10 </strong></p>
+</div>
 <img src="https://cdn.dribbble.com/users/783/screenshots/104300/shot_1295820312.gif" alt="Computer man" style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg');width:500px;height:400px;">
 
 </body>
-</html>
