--- a/computer-history/2010.html
+++ b/computer-history/2010.html
@@ -65,7 +65,8 @@ h1{
 <p><strong>2012: Facebook gains 1 billion users on October 4.</strong></p>
 
 <p><strong>2015: Apple releases the Apple Watch. Microsoft releases Windows 10 </strong></p>
-</div>
-<img src="https://cdn.dribbble.com/users/783/screenshots/104300/shot_1295820312.gif" alt="Computer man" style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg');width:500px;height:400px;">
 
+<img src="https://cdn.dribbble.com/users/783/screenshots/104300/shot_1295820312.gif" alt="Computer man" style="background-image:url('http://www.teknisyenoto.com/haberres/web-sitemiz-yayinda.jpg');width:500px;height:400px;">
+</div>
 </body>
+</html>
