--- a/html_reference.html
+++ b/html_reference.html
@@ -3,22 +3,116 @@
 <head>
 <title>HTML Reference</title>
 <style>
+#myHeader {
+    background-color:rgb(255, 204, 255) ;
+    color: black;
+    padding:10px;
+    text-align: center;
+    font-size:20px;
+} 
 .background {
-	height: 1050px;
-    width: 960px;
+	height:1050 px;
+    width:960px;
      background: linear-gradient(#6BEBFF, #8F5CFF );
 }
 </style>
 <body>
 <div class="background">
-<h1>HTML Tag</h1>
 
+<h1>HTML Tag</h1>
 <h2>The &lt a &gt tag</h2>
-<p>defines a hyperlink, which is used to link from one page to another.</p>
-<p>Example:&lt a href="https://www.w3schools.com">Visit W3Schools.com!&lt / a &gt</p>
+<h1 id="myHeader">defines a hyperlink, which is used to link from one page to another.
+<p>Example:&lt a href="https://www.w3schools.com">Visit W3Schools.com!&lt / a &gt</p> </h1>
+
 <h2>The &lt b &gt tag</h2>
-<p>The &lt b &gt tag specifies bold text.</p>
-<p>Example: &lt p &gt This is normal text - &lt b &gt and this is bold text &lt /b &gt &lt /p &gt </p>
+<h1 id="myHeader">The &lt b &gt tag specifies bold text.
+<p>Example:&lt p &gt This is normal text - &lt b &gt and this is bold text &lt /b &gt &lt /p &gt </p></h1>
+
+<h2>The &lt em &gt tag</h2>
+<h1 id="myHeader">The &lt em &gt tag is a phrase tag. It renders as emphasized text.
+<p>Example:&lt em  &gt Emphasized text &lt /em &gt</h1></p>
+
+<h2>The &lt li &gt tag</h2>
+<h1 id="myHeader">The &lt li &gt tag defines a list item.
+<div>
+<p>Example:
+<p>&lt ol &gt</p>
+  <p>&lt li &gt Coffee &lt /li &gt</p>
+  <p>&lt li &gt Tea &lt /li &gt</p>
+  <p>&lt li &gt Milk &lt /li &gt</p>
+<P>&lt /ol &gt </p></h1>
+
+<h2>The &lt p &gt tag</h2>
+<h1 id="myHeader">The &lt p &gt tag defines a paragraph.
+<p>Example:</p></h1>
+
+<h2>The &lt strong &gt tag</h2>
+<h1 id="myHeader">The &lt strong &gt tag is a phrase tag. It defines important text. 
+<p>Example:</p></h1>
+
+<h2>The &lt table &gt tag</h2>
+<h1 id="myHeader">The &lt table &gt tag defines an HTML table. An HTML table consists of the &lt table &gt element and one or more &lt tr &gt,&lt th &gt,and &lt td &gt elements. 
+<p>Example:</p></h1>
+
+
+<h2>The &lt video &gt tag</h2>
+<h1 id="myHeader">The &lt video &gt tag specifies video, such as a movie clip or other video streams.
+<p>Currently, there are 3 supported video formats for the &lt video &gt element: MP4, WebM, and Ogg:</p>
+<ul>
+<li>MP4 = MPEG 4 files with H264 video codec and AAC audio codec</li>
+<li>WebM = WebM files with VP8 video codec and Vorbis audio codec</li>
+<li>Ogg = Ogg files with Theora video codec and Vorbis audio codec</li>
+</ul>
+<p>Example:</p></h1>
+
+<h2>The &lt u &gt tag</h2>
+<h1 id="myHeader">The &lt u &gt tag represents some text that should be stylistically different from normal text, such as misspelled words or proper nouns in Chinese. 
+<p>Example:</p></h1>
+
+<h2>The &lt link &gt tag</h2>
+<h1 id="myHeader">The &lt link &gt tag defines a link between a document and an external resource.
+<p>Example:</p></h1>
+
+<h2>The &lt ins &gt tag</h2>
+<h1 id="myHeader">The &lt ins &gt tag defines a text that has been inserted into a document. 
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
+<h2>The &lt &gt tag</h2>
+<h1 id="myHeader"> >
+<p>Example:</p></h1>
+
 
 </body>
 </html> 
