--- a/html_reference.html
+++ b/html_reference.html
@@ -3,11 +3,19 @@
 <head>
 <title>HTML Reference</title>
 <style>
+h2{
+   color: rgb(0, 0, 255);
+   text-align: center;
+}
+h1{
+   color:rgb(0, 0, 255);
+   text-align:center;
+}
 #myHeader {
     background-color:rgb(255, 204, 255) ;
     color: black;
     padding:10px;
-    text-align: center;
+    text-align: left;
     font-size:20px;
 } 
 .background {
@@ -20,6 +28,8 @@
 <div class="background">
 
 <h1>HTML Tag</h1>
+<img src="https://media.giphy.com/media/CRDjFTw8hGD8Q/giphy.gif" alt="Computer man" style="width:500px;height:400px;">
+
 <h2>The &lt a &gt tag</h2>
 <h1 id="myHeader">defines a hyperlink, which is used to link from one page to another.
 <p>Example:&lt a href="https://www.w3schools.com">Visit W3Schools.com!&lt / a &gt</p> </h1>
@@ -44,16 +54,24 @@
 
 <h2>The &lt p &gt tag</h2>
 <h1 id="myHeader">The &lt p &gt tag defines a paragraph.
-<p>Example:</p></h1>
+<p>Example:&lt p &gt This is paragraph &lt /p &gt</p></h1>
 
 <h2>The &lt strong &gt tag</h2>
 <h1 id="myHeader">The &lt strong &gt tag is a phrase tag. It defines important text. 
-<p>Example:</p></h1>
+<p>Example:&lt strong &gt Strong text &lt /strong &gt</p></h1>
 
 <h2>The &lt table &gt tag</h2>
 <h1 id="myHeader">The &lt table &gt tag defines an HTML table. An HTML table consists of the &lt table &gt element and one or more &lt tr &gt,&lt th &gt,and &lt td &gt elements. 
-<p>Example:</p></h1>
-
+<p>Example:&lt table &gt</p>
+  <p>&lt tr &gt</p>
+    <p>&lt th &gt Month &lt /th &gt</p>
+    <p>&lt th &gt Savings &lt/th &gt</p>
+ <p> &lt /tr &gt </p>
+ <p> &lt tr &gt</p>
+    <p>&lt td &gt January &lt /td &gt</p>
+    <p>&lt td &gt $100 &lt /td &gt</P>
+ <p> &lt /tr &gt</p>
+<p>&lt /table &gt </p></h1>
 
 <h2>The &lt video &gt tag</h2>
 <h1 id="myHeader">The &lt video &gt tag specifies video, such as a movie clip or other video streams.
@@ -63,56 +81,120 @@
 <li>WebM = WebM files with VP8 video codec and Vorbis audio codec</li>
 <li>Ogg = Ogg files with Theora video codec and Vorbis audio codec</li>
 </ul>
-<p>Example:</p></h1>
+<p>Example:<p>
+  <p>&lt video width="320" height="240" controls &gt</p>
+  <p> &lt source src="movie.mp4" type="video/mp4"&gt</p>
+  <p>&lt source src="movie.ogg" type="video/ogg"&gt</p>
+  <p>Your browser does not support the video tag.</p>
+<p>&lt /video &gt</p></h1>
 
 <h2>The &lt u &gt tag</h2>
 <h1 id="myHeader">The &lt u &gt tag represents some text that should be stylistically different from normal text, such as misspelled words or proper nouns in Chinese. 
-<p>Example:</p></h1>
+<p>Example:&lt p &gt This is a &lt u &gt parragraph &lt /u &gt. &lt /p &gt </p></h1>
 
 <h2>The &lt link &gt tag</h2>
 <h1 id="myHeader">The &lt link &gt tag defines a link between a document and an external resource.
-<p>Example:</p></h1>
+<p>Example:</p>
+<p> &lt head &gt </p>
+<p> &lt link rel="stylesheet" type="text/css" href="theme.css" &gt </p>
+<p> &lt /head &gt </p></h1>
 
 <h2>The &lt ins &gt tag</h2>
 <h1 id="myHeader">The &lt ins &gt tag defines a text that has been inserted into a document. 
-<p>Example:</p></h1>
+<p>Example:&lt p &gt My favorite color is &lt del &gt blue &lt /del &gt &lt ins &gt red &lt /ins &gt !&lt /p &gt</p></h1>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<h2>The &lt data &gt tag</h2>
+<h1 id="myHeader">The &lt data &gt tag links the given content with a machine-readable translation.
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<p>This element provides both a machine-readable value for data processors, and a human-readable value for rendering in a browser.</p>
+<p>Example:</p>
+<p>&lt ul &gt</p>
+<p>&lt li &gt &lt data value="21053"&gt Cherry Tomato &lt /data &gt &lt /li &gt </p>
+<p>&lt li &gt &lt data value="21054"&gt Beef Tomato &lt /data &gt &lt /li &gt </p>
+<p>&lt li &gt &lt data value="21055"&gt Snack Tomato &lt /data &gt &lt /li &gt </p>
+<p>&lt /ul &gt </p></h1>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<h2>The &lt head &gt tag</h2>
+<h1 id="myHeader">The &lt head &gt element is a container for all the head elements.
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<p>The &lt head &gt element can include a title for the document, scripts, styles, meta information, and more.</p>
+<p>Example:</p>
+<p>&lt !DOCTYPE html &gt </p>
+<p>&lt html &gt</p>
+<p>&lt head &gt</p>
+  <p>&lt title &gt Title of the document &lt /title &gt</p>
+<p>&lt /head &gt</p>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<p>&lt body &gt</p>
+The content of the document......
+<p>&lt /body &gt</p>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<p>&lt /html &gt</p>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<h2>The &lt script &gt tag</h2>
+<h1 id="myHeader">The &lt script &gt tag is used to define a client-side script (JavaScript).
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<p>The &lt script &gt element either contains scripting statements, or it points to an external script file through the src attribute.</p>
+<p>Example:</p>
+<p> &lt script &gt </p>
+<p> document.getElementById("demo").innerHTML = "Hello JavaScript!"; </p>
+<P> &lt /script &gt </p> </h1>
 
-<h2>The &lt &gt tag</h2>
-<h1 id="myHeader"> >
-<p>Example:</p></h1>
+<h2>The &lt q &gt tag</h2>
+<h1 id="myHeader">The &lt q &gt tag defines a short quotation. 
+<p>Example:</p>
+<p> &lt p &gt WWF's goal is to: </p>
+<p> &lt q &gt Build a future where people live in harmony with nature.&lt /q &gt </p>
+<p> We hope they succeed.&lt /p &gt </p></h1>
+
+
+<h2>The &lt small &gt tag</h2>
+<h1 id="myHeader">The &lt small &gt tag defines smaller text (and other side comments).
+<p>Example:</p>
+<p> &lt p &gt W3Schools.com - the world's largest web development site.&lt /p &gt </p>
+<p> &lt p &gt &lt small &gt Copyright 1999-2050 by Refsnes Data &lt /small &gt &lt /p &gt </p></h1>
+
+<h2>The &lt svg &gt tag</h2>
+<h1 id="myHeader">The &lt svg &gt tag defines a container for SVG graphics.
+
+<p>SVG has several methods for drawing paths, boxes, circles, text, and graphic images.</p>
+<p>Example:</p>
+<p> &lt svg width="100" height="100" &gt </p>
+ <p> &lt circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" /&gt </p>
+<p> &lt /svg &gt </p>
+
+<h2>The &lt pre &gt tag</h2>
+<h1 id="myHeader">The &lt pre &gt tag defines preformatted text.
+
+<p>Text in a &lt pre &gt element is displayed in a fixed-width font (usually Courier), and it preserves both spaces and line breaks.</p>
+<p>Example:</p>
+<p> &lt pre &gt </p>
+<p> Text in a pre element </p>
+<p> is displayed in a fixed-width </p>
+<p> font, and it preserves </p>
+<p> both      spaces and </p>
+<p> line breaks </p>
+<p> &lt /pre &gt </p> </h1>
+
+<h2>The &lt section &gt tag</h2>
+<h1 id="myHeader">The  &lt section &gt tag defines sections in a document, such as chapters, headers, footers, or any other sections of the document.
+<p>Example:</p>
+<p> &lt section &gt </p>
+ <p> &lt h1 &gt WWF &lt /h1 &gt </p>
+ <p> &lt p &gt The World Wide Fund for Nature (WWF) is....&lt /p &gt </p>
+<p> &lt /section &gt </p></h1>
+
+<h2>The &lt span &gt tag</h2>
+<h1 id="myHeader"><ul>
+<li>The &lt span &gt tag is used to group inline-elements in a document.</li>
+
+<li>The &lt span &gt tag provides no visual change by itself.</li>
+
+<li>The &lt span &gt tag provides a way to add a hook to a part of a text or a part of a document. </li>
+</ul>
+<p>Example:&lt p &gt My mother has &lt span style="color:blue"&gt blue &lt /span &gt eyes.&lt /p &gt </p></h1>
 
 
 </body>
 </html> 
+
