--- a/html_reference.html
+++ b/html_reference.html
@@ -23,15 +23,23 @@ h1{
     width:960px;
      background: linear-gradient(#6BEBFF, #8F5CFF );
 }
+
+img {
+	 display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 </style>
 <body>
 <div class="background">
 
-<h1>HTML Tag</h1>
+<h1>HTML Tags</h1>
 <img src="https://media.giphy.com/media/CRDjFTw8hGD8Q/giphy.gif" alt="Computer man" style="width:500px;height:400px;">
 
 <h2>The &lt a &gt tag</h2>
-<h1 id="myHeader">defines a hyperlink, which is used to link from one page to another.
+<h1 id="myHeader">The &lt a &gt tag defines a hyperlink, which is used to link from one page to another.
 <p>Example:&lt a href="https://www.w3schools.com">Visit W3Schools.com!&lt / a &gt</p> </h1>
 
 <h2>The &lt b &gt tag</h2>
@@ -197,4 +205,3 @@ The content of the document......
 
 </body>
 </html> 
-
